# FormList-Manipulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO  vcpkg-configuration.json  vcpkg.json
cmake/: Plugin.hpp.in  version.rc.in
cmake/ports/mergemapper/: vcpkg.json
cmake/ports/unordered-dense/: vcpkg.json
src/: EntryType.hpp  EventManager.hpp  FormListType.hpp  InfoType.hpp  Keywords.hpp  LogInfo.hpp  Manipulator.hpp  OperatingMode.hpp  Plugin.hpp  RegisterFuncs.hpp  Utility.hpp  main.cpp
src/Manipulator/: EventManager.hpp  Manipulator.hpp  RegisterFuncs.hpp
src/Utility/: ExternalModules.hpp  LogInfo.hpp  Utility.hpp
src/Utility/Types/: EntryType.hpp  FormListType.hpp  FormType.hpp  InfoType.hpp  Keywords.hpp  Types.hpp
